Inclusão do método updateMaintenance.
