# src/main/resources/openapi.yaml
@@ -140,6 +140,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/MaintenanceResponse'
 
+    put:
+      summary: Atualizar informações de uma manutenção
+      operationId: updateMaintenance
+      tags:
+        - Maintenance
+      parameters:
+        - name: maintenanceId
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MaintenanceUpdateRequest'
+      responses:
+        '200':
+          description: Manutenção atualizada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MaintenanceResponse'
 
 components:
   schemas:
@@ -201,3 +225,17 @@ components:
         data:
           type: string
           format: date
+    MaintenanceUpdateRequest:
+      type: object
+      required:
+        - description
+        - cost
+        - ativa
+      properties:
+        description:
+          type: string
+        cost:
+          type: number
+          format: double
+        ativa:
+          type: boolean
